@@ -45,6 +45,7 @@
 <li><a href="Tasks/augment.html">Augment</a></li>
 <li><a href="Tasks/available.html">Available</a></li>
 <li><a href="Tasks/basename.html">Basename</a></li>
+<li><a href="Tasks/bindtargets.html">Bindtargets</a></li>
 <li><a href="Tasks/buildnumber.html">BuildNumber</a></li>
 <li><a href="Tasks/unpack.html">BUnzip2</a></li>
 <li><a href="Tasks/pack.html">BZip2</a></li>
