@@ -23,6 +23,7 @@ apt=org.apache.tools.ant.taskdefs.Apt
 augment=org.apache.tools.ant.taskdefs.AugmentReference
 available=org.apache.tools.ant.taskdefs.Available
 basename=org.apache.tools.ant.taskdefs.Basename
+bindtargets=org.apache.tools.ant.taskdefs.BindTargets
 buildnumber=org.apache.tools.ant.taskdefs.BuildNumber
 bunzip2=org.apache.tools.ant.taskdefs.BUnzip2
 bzip2=org.apache.tools.ant.taskdefs.BZip2
