@@ -270,6 +270,9 @@ Other changes:
    BuildExceptions.
    Bugzilla Report 48835.
 
+ * New task <bindtargets> to make a list of targets bound to some
+   specified extension point.
+
 Changes from Ant 1.8.0 TO Ant 1.8.1 
 ===================================
 
